# liquent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md
docs/: lq-009-cli-strategy-selection.md  lq-010-synthetic-comparison.md  lq-011-reporting-strategy-params.md  lq-012-cli-cost-model.md  lq-013-structured-synthetic-comparison-report.md  lq-014-synthetic-dataset-builders.md  lq-015-max-signals-per-day.md  lq-016-max-signals-synthetic-comparison-report.md  lq-018-cli-help-examples-review.md  lq-019-visual-dashboard-local-preview.md  lq-020-visual-preview-streamlit-setup.md  lq-021-visual-preview-ui-polish-signal-chart.md  lq-022-visual-preview-local-csv-upload.md  lq-023-visual-preview-csv-validation-ux.md  lq-024-visual-preview-csv-schema-variants.md  lq-025-visual-preview-quickstart.md  lq-026-visual-preview-docs-index.md  lq-027-visual-preview-stabilization-checkpoint.md  lq-028-controlled-streamlit-smoke-test-checklist.md  lq-029-visual-preview-review-pause-next-track.md  lq-030-manual-streamlit-smoke-test-execution-plan.md  lq-031-manual-streamlit-smoke-test-result-template.md  lq-032-streamlit-install-decision-no-execution-checkpoint.md  lq-033-optional-streamlit-install-execution-plan.md  lq-034-visual-preview-documentation-freeze.md  lq-035-backtest-runner-trade-lifecycle-integration.md  lq-036-backtest-runner-regression-test-plan.md  lq-038-runner-lifecycle-stop-exit-semantics.md  lq-039-explicit-exit-reason-stop-exit-spec.md  lq-040-runner-lifecycle-implementation-decision.md  lq-041-risk-engine-hardening.md  lq-044-cli-output-polish.md  (+12 more)
(+103 files in other folders)
